--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.22.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "node-fetch": "^2.6.2",
     "yandex-dialogs-sdk": "^2.3.0"
   }
 }
